// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Logo with link 1`] = `
<a
  href="/"
>
  <img
    alt="test"
    className="logo"
    sizes="(max-width: 830px) 38px, 138px"
    src="https://assets.kununu.com/images/footer/logo-desktop.svg"
    srcSet="https://assets.kununu.com/images/footer/logo-mobile.svg 38w, https://assets.kununu.com/images/footer/logo-desktop.svg 138w"
  />
</a>
`;

exports[`Renders Logo without crashing 1`] = `
<img
  alt="test"
  className="logo"
  sizes="(max-width: 830px) 38px, 138px"
  src="https://assets.kununu.com/images/footer/logo-desktop.svg"
  srcSet="https://assets.kununu.com/images/footer/logo-mobile.svg 38w, https://assets.kununu.com/images/footer/logo-desktop.svg 138w"
/>
`;
